# Quality-Flywheel-tool

./: .gitignore
.agent-quality/: protected-paths.txt  verify.yaml
agent-quality/: .gitignore  README.md  pyproject.toml
agent-quality/.agents/: AGENTS.md
agent-quality/implementation_details/: antigravity_plan.md
agent-quality/scripts/: init_project.sh
agent-quality/src/agent_quality/: cli.py  config.py  db.py  orchestrator.py  timeutil.py
agent-quality/src/agent_quality/adapters/: antigravity.py  capability.py  codex_cli.py  codex_hooks.py
agent-quality/src/agent_quality/capture/: artifacts.py  git_state.py
agent-quality/src/agent_quality/collector/: server.py
agent-quality/src/agent_quality/collector/static/: dashboard.css  dashboard.html  dashboard.js
agent-quality/src/agent_quality/reports/: metrics.py
agent-quality/src/agent_quality/review/: service.py
agent-quality/src/agent_quality/verification/: protected_paths.py
agent-quality/tests/: test_cli_antigravity_hooks.py  test_cli_codex_hooks.py  test_codex_adapter.py  test_codex_hooks.py  test_collector_server.py  test_dashboard_assets.py  test_db_hardening.py  test_orchestrator.py  test_redaction.py  test_review.py
agent-quality/vscode-extension/: README.md  package.json
agent-quality/vscode-extension/media/: dashboard.css  dashboard.html  dashboard.js  flywheel.css  flywheel.html  flywheel.js
agent-quality/vscode-extension/src/: extension.js
kimi_coding_agent_flywheel/clustering/: failure_analyzer.py
markdown_files/: README.md  problem_definition.md  pyproject.toml
(+38 files in other folders)
