[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-quality"
version = "0.1.0"
description = "Local-first quality telemetry and verification sidecar for coding agents."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
aq = "agent_quality.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_quality" = ["collector/static/*.html", "collector/static/*.css", "collector/static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
